Move iid and did fields from generate_mongo_id() to use Mongo OIDs.

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -26,8 +26,8 @@ mongohost=mongodb://127.0.0.1:27017
 ;activequeues=4N0
 ;ignorequeues=100530N1
 
-parameterformat=storable
-;parameterformat=json
+;parameterformat=storable
+parameterformat=json
 
 [HTTPAuth]
 method=none
