Added log4perl support in the engine, HTTP server, and worker threads.

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -29,5 +29,7 @@ mongohost=mongodb://127.0.0.1:27017
 ;parameterformat=storable
 parameterformat=json
 
+log4perl_conf=disbatch-log4perl.conf
+
 [HTTPAuth]
 method=none
