Availed worker thread to task, and added MJMS connection handle available to each worker thread.

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -31,5 +31,9 @@ parameterformat=json
 
 log4perl_conf=disbatch-log4perl.conf
 
+[MJMS]
+mongodb=mjms
+mongohost=mongodb://127.0.0.1:27017
+
 [HTTPAuth]
 method=none
