Adding MongoDB authentication.

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -21,6 +21,9 @@ updatetimerinterval=2
 ; The name of the MongoDB database to connect to
 mongodb=disbatch200
 mongohost=mongodb://127.0.0.1:27017
+; mongouser and mongopassword are optional if you run your mongod with --auth
+;mongouser=disbatch
+;mongopassword=bestjobsystem44
 
 ;activequeues=4N0
 ;ignorequeues=100530N1
