Deleted joe junk files; Added support for multiple Disbatch instances on the same machine

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -35,3 +35,13 @@ log4perl_conf=disbatch-log4perl.conf
 
 [HTTPAuth]
 method=none
+
+; If you run multiple Disbatch instances on the same machine, you need to
+; change all three keys to something unique for every instance.
+;
+; You will also need to change the httpport to something unique above!
+[EventBus]
+;ebid=1234
+;ipckey1=svmq
+;ipckey2=idtq
+;threadprefix=/tmp/thread_
