Enabled new configuration options (task_collection and queue_collection) to support multiple Disbatches running out of the same MongoDB that don't necessarily need to share tasks.

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -34,6 +34,10 @@ parameterformat=json
 
 log4perl_conf=disbatch-log4perl.conf
 
+; Collection name for tasks
+;tasks_collection=tasks
+;queues_collection=queues
+
 [HTTPAuth]
 method=none
 
