Implemented basic HTTP authentication using htpasswd format.

--- a/disbatch.ini
+++ b/disbatch.ini
@@ -40,6 +40,8 @@ log4perl_conf=disbatch-log4perl.conf
 
 [HTTPAuth]
 method=none
+;method=basic
+;passwd=htpasswd_path
 
 ; If you run multiple Disbatch instances on the same machine, you need to
 ; change all three keys to something unique for every instance.
