--- a/disbatch.ini
+++ b/disbatch.ini
@@ -38,6 +38,8 @@ log4perl_conf=disbatch-log4perl.conf
 ;tasks_collection=tasks
 ;queues_collection=queues
 
+tasks_before_workerthread_retirement=0
+
 [HTTPAuth]
 method=none
 ;method=basic
