--- a/etc/disbatch/disbatch-log4perl.conf
+++ b/etc/disbatch/disbatch-log4perl.conf
@@ -1,7 +1,7 @@
 log4perl.logger.disbatch           = TRACE, FileAppndr1, ScreenAppndr1
 
 log4perl.appender.FileAppndr1      = Log::Log4perl::Appender::File
-log4perl.appender.FileAppndr1.filename = disbatchd.log
+log4perl.appender.FileAppndr1.filename = /var/log/disbatchd.log
 log4perl.appender.FileAppndr1.layout   = \
                             Log::Log4perl::Layout::PatternLayout
 log4perl.appender.FileAppndr1.layout.ConversionPattern = [%p] %d %F{1} %L %C %c> %m %n
