--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,7 @@ author  = Ashley Willis <awillis@synacor.com>
 license = Perl_5
 copyright_holder = Matt Busigin, Ashley Willis, others
 copyright_year   = 2011
+main_module = lib/Synacor/Disbatch.pod
 
 [Git::Init]
 [NextRelease]	; before Git::Commit
