--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,7 @@ main_module = lib/Synacor/Disbatch.pod
 [Git::NextVersion]
 [Git::GatherDir]
 [@Git]		; Git::Check, Git::Commit, Git::Tag, Git::Push
-push_to = origin dzil
+push_to = origin master
 [@Filter / Basic]	; GatherDir, PruneCruft, ManifestSkip, MetaYAML, License, Readme, ExtraTests, ExecDir,
 -bundle = @Basic	; ShareDir, MakeMaker, Manifest, TestRelease, ConfirmRelease, UploadToCPAN
 -remove = GatherDir
