some changes needed for the new way

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name    = disbatch
-author  = Ashley Willis <awillis@synacor.com>
+author  = Ashley Willis <ashleyw@cpan.org>
 license = Perl_5
 copyright_holder = Matt Busigin, Ashley Willis, others
-copyright_year   = 2011
-main_module = lib/Synacor/Disbatch.pod
+copyright_year   = 2011, 2015
+main_module = lib/Disbatch.pod
 
 [Git::Init]
 [NextRelease]	; before Git::Commit
