integrate lib/Disbatch.pod into lib/Disbatch.pm

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author  = Ashley Willis <ashleyw@cpan.org>
 license = Perl_5
 copyright_holder = Matt Busigin, Ashley Willis, others
 copyright_year   = 2011, 2015
-main_module = lib/Disbatch.pod
+main_module = lib/Disbatch.pm
 
 [Git::Init]
 [NextRelease]	; before Git::Commit
