can't have more than 1 year in copyright_year in dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = disbatch
 author  = Ashley Willis <ashleyw@cpan.org>
 license = Perl_5
 copyright_holder = Matt Busigin, Ashley Willis, others
-copyright_year   = 2011, 2015
+copyright_year   = 2011
 main_module = lib/Disbatch.pm
 
 [Git::Init]
