rename to disbatch3. obsoletes disbatch < 3.2.4.9
this allows keeping this version installed with no changes to plugins, while installing disbatch 4 as well

the following files have been renamed so as not to cause conflicts with disbatch 4:

  bin/disbatch.pl -> bin/disbatch3.pl
  bin/disbatchd.pl -> bin/disbatch3d.pl
  etc/disbatch/disbatchd-init -> etc/disbatch/disbatch3d-init
  etc/init.d/disbatchd -> etc/init.d/disbatch3d
  etc/logrotate.d/disbatch -> etc/logrotate.d/disbatch3

logging and output is sent to /var/log/disbatch3d.log and /var/log/disbatch3d.out

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = disbatch
+name    = disbatch3
 author  = Ashley Willis <awillis@synacor.com>
 license = Perl_5
 copyright_holder = Matt Busigin, Ashley Willis, others
