--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,10 @@ die_on_existing_version = 1
 [PodVersion]	; add a VERSION head1 to each Perl document
 [MetaJSON]
 [AutoPrereqs]	; automatically extract prereqs from your modules
+[Prereqs]
+Limper::Engine::PSGI = 0
+Starman = 0
+File::Find::Rule = 0	; here only because it's a dep of Data::Compare but perl-Data-Compare.noarch doesn't know that
 [MetaProvides::Package]
 [Repository]
 ssh_to_https = 1
