have Dist::Zilla::Plugin::RPM do the release too

--- a/dist.ini
+++ b/dist.ini
@@ -30,3 +30,7 @@ ssh_to_https = 1
 spec_file = dist.spec
 sign = 0
 ignore_build_deps = 0
+
+push_packages = 1
+push_command = /home/awillis/bin/release
+push_ignore_packages = .src.rpm$
